create basic HTML file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
     <script src="script.js"></script>
+    <img src="images/Chris-Wedding-Day.jpg" width="500" alt="My test image" title="Chris' Wedding Day">
+    <h2>
+        Welcome to my website!
+      </h2>
+    <p>You may be wondering why my website is so blue well research says that "The color blue is one of the most popular colors used in design. Both men and women like blue, and the color speaks of trust and calm." <a href="https://designerly.com/what-is-the-best-background-color-for-a-website/#:~:text=White%20is%20not%20only%20the,will%20fade%20into%20the%20background.">link</a>. Also my favorite color so happens to be blue and I belive it to be calming and easy on the eyes.</p>
     
-</body>
+  <h3>About Me</h3>
+  <p1>
+    Im a 23 years of age and have always been intrested in technology and how it works! During the spring of 2020 I was able to build and setup my very own pc with my own hands! Another interesting fact about me is that im a indeed married you might have noticed that I put a "title element" in my photo. 
+  </p1>
+  </body>
 </html>
